<resources>
    <string name="app_name">Mint Weather</string>
    <string name="conditions_image">conditions image</string>
    <string name="condition_icon">condition icon</string>
    <string name="ten_day_forecast">10 Day Forecast</string>
    <string name="high_low_text">H:%d\u00B0 L:%d\u00B0</string>
    <string name="current_temp">%d\u00B0</string>
    <string name="humidity_title">Humidity</string>
    <string name="astronomy_title">Astronomy</string>

    <!-- for location -->

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
</resources>